--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </p>
   <p>I like fast and shiny things. I sometimes pretend to be a linguist.</p>
   <p>If I were a woodland critter, I would be a hawk.</p>
-  <p>When faced with "why?", ask "why not?"</p>
+  <p>I prefer to ask the question: "why not?"</p>
   <p>Purple monkey dishwasher</p>
-  <p><i>fin</i></p>
+  <p><i>Qapla'!</i></p>
 </div>
