--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
-<div style="text-align:center;margin-top:80px;">
-  <p>
-    <a target="_new" href="https://github.com/hc5duke">github</a>,
-    <a target="_new" href="https://twitter.com/hc5duke">twitter</a>,
-    <a target="_new" href="https://facebook.com/hc5duke">facebook</a>,
-    <a target="_new" href="http://linkedin.com/in/hc5duke">linkedin</a>,
-  </p>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>hc5duke.com</title>
+  </head>
+  <body>
+    <div style="text-align:center;margin-top:80px;">
+      <p>
+        <a href="https://github.com/hc5duke">github</a>,
+        <a href="https://twitter.com/hc5duke">twitter</a>,
+        <a href="https://facebook.com/hc5duke">facebook</a>,
+        <a href="http://linkedin.com/in/hc5duke">linkedin</a>,
+      </p>
+    </div>
+  </body>
+</html>
