--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <title>hc5duke.com</title>
+    <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div style="text-align:center;margin-top:80px;">
+    <div style="text-align:center;margin-top:80px;font-family: 'Crete Round', cursive;font-size:64px;">
       <p>
-        <a href="https://github.com/hc5duke">github</a>,
-        <a href="https://twitter.com/hc5duke">twitter</a>,
-        <a href="https://facebook.com/hc5duke">facebook</a>,
-        <a href="http://linkedin.com/in/hc5duke">linkedin</a>,
+        <a href="https://github.com/hc5duke">github</a><br/>
+        <a href="https://twitter.com/hc5duke">twitter</a><br/>
+        <a href="https://facebook.com/hc5duke">facebook</a><br/>
+        <a href="http://linkedin.com/in/hc5duke">linkedin</a><br/>
       </p>
     </div>
   </body>
