--- a/index.html
+++ b/index.html
@@ -3,14 +3,29 @@
   <head>
     <title>hc5duke.com</title>
     <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
+    <style>
+      div {
+        text-align: center;
+        margin-top: 80px;
+        font-family: 'Crete Round', cursive;
+        font-size: 64px;
+      }
+      a { text-decoration: none; }
+      span.gray { color: #eee; }
+    </style>
   </head>
   <body>
-    <div style="text-align:center;margin-top:80px;font-family: 'Crete Round', cursive;font-size:64px;">
+    <div style="">
       <p>
         <a href="https://github.com/hc5duke">github</a><br/>
         <a href="https://twitter.com/hc5duke">twitter</a><br/>
         <a href="https://facebook.com/hc5duke">facebook</a><br/>
         <a href="http://linkedin.com/in/hc5duke">linkedin</a><br/>
+      </p>
+      <p>
+        <a href="http://blog.choibean.com/">blog</a>
+        <span class="gray">/</span>
+        <a href="http://tapjoy.com/site/team#hwanjoonchoi">job</a>
       </p>
     </div>
   </body>
