--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         font-family: 'Crete Round', cursive;
         font-size: 64px;
       }
-      a { text-decoration: none; }
+      a { text-decoration: none; padding: 0px 30px; color: #08f}
+      a:hover { background-color: #08f; color: #cff; }
       span.gray { color: #eee; }
     </style>
   </head>
