ok one last time

--- a/index.html
+++ b/index.html
@@ -10,15 +10,26 @@
         background-attachment: fixed;
         padding: 0;
         margin: 0;
-      }
-      div#inside {
-        background: rgba(255, 255, 255, 0.5);
-        text-align: center;
         font-family: 'Crete Round', cursive;
         font-size: 96px;
+        text-align: center;
       }
-      a { text-decoration: none; padding: 0px 30px; color: #08f; min-width: 50%; display: block; }
-      a:hover { background-color: #08f; color: #cff; }
+      div#inside {
+        background: rgba(255, 255, 255, 0.6);
+      }
+      a {
+        text-decoration: none;
+        padding: 0px 30px;
+        min-width: 50%;
+        display: block;
+        color: #08f;
+        text-shadow: #fff 0px 0px 5px;
+      }
+      a:hover {
+        background-color: rgba(0, 128, 255, 0.5);
+        color: #cff;
+        text-shadow: #000 1px -1px 3px;
+      }
       span.gray { color: #eee; }
     </style>
   </head>
