--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <a class="link" href="https://github.com/hc5duke">github</a>
       <a class="link" href="https://twitter.com/hc5duke">twitter</a>
       <a class="link" href="https://facebook.com/hc5duke">facebook</a>
-      <a class="link" href="http://linkedin.com/in/hc5duke">linkedin</a>
+      <a class="link" href="http://www.linkedin.com/in/hc5duke">linkedin</a>
       <a class="link" href="https://plus.google.com/101463266033239627517">google+</a>
       <a class="link" href="http://blog.choibean.com/">blog</a>
       <a class="link" href="http://tapjoy.com/site/team#hwanjoonchoi">job</a>
