damn you facebook for having improper meta tag

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>hc5duke.com</title>
-    <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
+    <meta property='og:image' content='https://graph.facebook.com/hc5duke/picture' />
+    <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css' />
     <style>
       body {
         background-image: url(bg.jpg);
