--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>hc5duke.com</title>
-    <meta property='og:image' content='https://graph.facebook.com/hc5duke/picture' />
+    <meta property='og:image' content='http://www.hc5duke.com/bg.jpg' />
     <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css' />
     <style>
       body {
