--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <a class="link" href="http://www.linkedin.com/in/hc5duke">linkedin</a>
       <a class="link" href="https://plus.google.com/101463266033239627517">google+</a>
       <a class="link" href="http://blog.choibean.com/">blog</a>
-      <a class="link" href="http://tapjoy.com/site/team#hwanjoonchoi">job</a>
+      <a class="link" href="http://www.tapjoy.com/">job</a>
     </div>
     <script>
       var validCodes = [ 96, 97, 100, 104, 106, 107, 108, 115, 119 ],
@@ -102,7 +102,7 @@
         }
       };
       document.onmousemove = function(event){
-        if (event.x == lastMouseX && event.y == lastMouseY) {
+        if (event.x == lastMouseX && event.y == lastMouseY || lastMouseX == -1 || lastMouseY == -1) {
           return false;
         }
         lastMouseX = event.x;
