tell google i own this site

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>hc5duke.com</title>
     <meta property='og:image' content='http://www.hc5duke.com/bg.jpg' />
+    <meta name="google-site-verification" content="xNbPtJWkZuXktCIHlyds2N8miwAj1BEgJmljJYKnIVQ" />
     <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css' />
     <style>
       body {
