remove bg image

--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html>
   <head>
     <title>hc5duke.com</title>
-    <meta property='og:image' content='http://www.hc5duke.com/bg.jpg' />
     <meta name="google-site-verification" content="xNbPtJWkZuXktCIHlyds2N8miwAj1BEgJmljJYKnIVQ" />
     <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css' />
     <style>
       body {
-        background-image: url(bg.jpg);
         background-size: 100%;
         background-attachment: fixed;
         padding: 0;
@@ -15,9 +13,15 @@
         font-family: 'Crete Round', cursive;
         font-size: 96px;
         text-align: center;
+        color: #222;
       }
       div#inside {
-        background: rgba(255, 255, 255, 0.6);
+        background: #eee;
+        padding-bottom: 500px;
+      }
+      h3 {
+        margin: 0;
+        margin-bottom: 0.3em;
       }
       a {
         text-decoration: none;
@@ -37,13 +41,14 @@
   </head>
   <body>
     <div id="inside">
+      <h3>hc5duke.com</h3>
       <a class="link" href="https://github.com/hc5duke">github</a>
       <a class="link" href="https://twitter.com/hc5duke">twitter</a>
       <a class="link" href="https://facebook.com/hc5duke">facebook</a>
       <a class="link" href="http://www.linkedin.com/in/hc5duke">linkedin</a>
       <a class="link" href="https://plus.google.com/101463266033239627517">google+</a>
       <a class="link" href="http://blog.choibean.com/">blog</a>
-      <a class="link" href="http://www.tapjoy.com/">job</a>
+      <a class="link" href="https://www.distill.cc/">job</a>
     </div>
     <script>
       var validCodes = [ 96, 97, 100, 104, 106, 107, 108, 115, 119 ],
