--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <a class="link" href="http://www.linkedin.com/in/hc5duke">linkedin</a>
       <a class="link" href="https://plus.google.com/101463266033239627517">google+</a>
       <a class="link" href="http://blog.choibean.com/">blog</a>
-      <a class="link" href="https://www.distill.cc/">job</a>
+      <a class="link" href="https://www.yahoo.com/">job</a>
     </div>
     <script>
       var validCodes = [ 96, 97, 100, 104, 106, 107, 108, 115, 119 ],
