--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>hc5duke.com</title>
     <meta name="google-site-verification" content="xNbPtJWkZuXktCIHlyds2N8miwAj1BEgJmljJYKnIVQ" />
+    <meta name="google-site-verification" content="qoBOvCqjSXJNwSLfPVe_1lMbapWPWmroZ79Pw6EVB2w" />
     <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css' />
     <style>
       body {
